--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,24 +2,25 @@ project (clickhouse-odbc)
 cmake_minimum_required (VERSION 2.6)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${clickhouse-odbc_SOURCE_DIR}/cmake/Modules")
 
-message (STATUS "CMAKE_BUILD_TYPE: " ${CMAKE_BUILD_TYPE} )
+message (STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 
 set (COMMON_WARNING_FLAGS "-Wall")	# -Werror is also added inside directories with our own code.
 set (CXX_WARNING_FLAGS "-Wnon-virtual-dtor")
 
 set (CMAKE_BUILD_COLOR_MAKEFILE          ON)
 set (CMAKE_CXX_FLAGS                     "${CMAKE_CXX_FLAGS} -std=c++14 -O2 -g -fvisibility-inlines-hidden -Wl,-Bstatic,--whole-archive -static-libgcc -static-libstdc++ -Wl,--no-whole-archive")
-set (CMAKE_POSITION_INDEPENDENT_CODE ON)
+set (CMAKE_POSITION_INDEPENDENT_CODE     ON)
 
+# === find_poco ===
 option (USE_INTERNAL_POCO_LIBRARY "Set to FALSE to use system poco library instead of bundled" 1)
 
 if (NOT USE_INTERNAL_POCO_LIBRARY)
 
-if (WIN32 OR MSVC)
-   set(CMAKE_FIND_LIBRARY_SUFFIXES ".lib")
-elseif (UNIX)
-    set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
-endif ()
+    if (WIN32 OR MSVC)
+        set(CMAKE_FIND_LIBRARY_SUFFIXES ".lib")
+    elseif (UNIX)
+        set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+    endif ()
 
     find_package (Poco COMPONENTS Net)
 endif ()
@@ -54,13 +55,18 @@ else ()
     set (Poco_Net_LIBRARY PocoNet)
     include_directories (BEFORE ${Poco_INCLUDE_DIRS})
 endif ()
+
 message(STATUS "Using Poco: ${Poco_INCLUDE_DIRS} : ${Poco_Foundation_LIBRARY},${Poco_Util_LIBRARY},${Poco_Net_LIBRARY}")
+# === find_poco_end ===
 
 message (STATUS "Building for: ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROCESSOR} ${CMAKE_LIBRARY_ARCHITECTURE}")
 
 add_subdirectory (contrib)
 
-# Remove pthread from linking poco's Net
-set_property(TARGET Net PROPERTY INTERFACE_LINK_LIBRARIES "")
+# after contrib/poco
+if (USE_INTERNAL_POCO_LIBRARY)
+    # Remove pthread from linking poco's Net
+    set_property(TARGET Net PROPERTY INTERFACE_LINK_LIBRARIES "")
+endif ()
 
 add_subdirectory (driver)
