--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Homepage: https://clickhouse.yandex
 Package: clickhouse-odbc
 Section: database
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libssl1.0.0
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Clickhouse odbc driver
  .
