--- a/.travis.yml
+++ b/.travis.yml
@@ -120,11 +120,10 @@ install:
   # Need in binulils because /usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/8/../../../x86_64-linux-gnu/libodbc.a(logOpen.o): unrecognized relocation (0x2a) in section `.text'
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-get install -y $ODBC_LIB binutils | tee build.log 2>&1 || (cat build.log && exit 1); fi
 
-# TODO: get nanodbc, right now it fails to build
-# before_script:
-#   # nanodbc for more tests
-#   - cd ./contrib; git clone https://github.com/nanodbc/nanodbc; cd ..
-#   - ls -lah . ./contrib
+before_script:
+  # anodbc for more tests
+  - cd ./contrib && git clone --recursive https://github.com/nanodbc/nanodbc.git && cd ..
+  - ls -lah . ./contrib
 
 script:
   - mkdir -p build
