--- a/.travis.yml
+++ b/.travis.yml
@@ -117,6 +117,8 @@ install:
     # brew update is to mitigate Travis error "Error: Your Homebrew is outdated. Please run `brew update`."
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "installing ninja + ${HOMEBREW_PACKAGES}"; brew install ninja ${HOMEBREW_PACKAGES}; fi
+    # see https://gist.github.com/filimonov/c61b1fa07aa032293dfaf9e97de2c09e i hope later brew package will appear
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "installing & starting ClickHouse";  ( curl -sSL https://gist.githubusercontent.com/filimonov/c61b1fa07aa032293dfaf9e97de2c09e/raw/chmac.sh | bash ) ; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu bionic main universe"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1); fi
   # Need in binulils because /usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/8/../../../x86_64-linux-gnu/libodbc.a(logOpen.o): unrecognized relocation (0x2a) in section `.text'
@@ -139,16 +141,21 @@ script:
   # unit-tests
   - ctest -R '.*-ut.*'
   # more complicated tests
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT}; fi
-  # Using absolute path to compiler to fix setup.py issue of pyodbc: unable to execute 'clang': No such file or directory
-  #- sudo CC=`which $CC` CXX=`which $CXX` pip install pyodbc -V --disable-pip-version-check
-  # To simplify things a bit, start ClickHouse server in docker
-  - echo "Clickhouse image ${CLICKHOUSE_SERVER_IMAGE}";
-  - docker pull ${CLICKHOUSE_SERVER_IMAGE}
-  - CLICKHOUSE_SERVER_CONTAINER=$(docker run  -d ${CLICKHOUSE_SERVER_IMAGE})
-  - CLICKHOUSE_SERVER_IP=$(docker inspect -f '{{ .NetworkSettings.IPAddress }}' ${CLICKHOUSE_SERVER_CONTAINER})
-  - docker ps -a
-  - docker stats -a --no-stream
+  - |
+    if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+      CLICKHOUSE_SERVER_IP='localhost'
+      # echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT};
+    else 
+      # Using absolute path to compiler to fix setup.py issue of pyodbc: unable to execute 'clang': No such file or directory
+      #- sudo CC=`which $CC` CXX=`which $CXX` pip install pyodbc -V --disable-pip-version-check
+      # To simplify things a bit, start ClickHouse server in docker
+      echo "Clickhouse image ${CLICKHOUSE_SERVER_IMAGE}";
+      docker pull ${CLICKHOUSE_SERVER_IMAGE}
+      CLICKHOUSE_SERVER_CONTAINER=$(docker run  -d ${CLICKHOUSE_SERVER_IMAGE})
+      CLICKHOUSE_SERVER_IP=$(docker inspect -f '{{ .NetworkSettings.IPAddress }}' ${CLICKHOUSE_SERVER_CONTAINER})
+      docker ps -a
+      docker stats -a --no-stream
+    fi
   # TODO: think about paths on windows
   - ODBC_DRIVER_PATH=$(realpath driver/libclickhouseodbc.so)
   - ODBC_DRIVERW_PATH=$(realpath driver/libclickhouseodbcw.so)
