--- a/.travis.yml
+++ b/.travis.yml
@@ -315,7 +315,7 @@ install: |-
     sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pip python-pyodbc python3 python3-pip python3-pyodbc python3-setuptools
     pip3 install --user testflows
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-    # brew install cmake perl python@2 python@3
+    # brew install cmake perl python
     PERL_MM_USE_DEFAULT=1 cpan -T DBD::ODBC
     if [[ "$ODBC_PROVIDER" == "UnixODBC" ]]; then
       pip2 install --user pyodbc
